improved portal header and footer improved vite.config.ts added extended logos

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,6 @@
 {
     "title": "NextMU",
     "description": "Enjoy playing our NextMU server!",
-    "copyright": "Copyright © {{firstYear}} - {{currentYear}} NextMU. All rights reserved."
+    "footer.message": "An Open Source project",
+    "footer.copyright": "© {{firstYear}} - {{currentYear}} NextMU. All rights reserved."
 }
