[WIP] added update service upload file support

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -22,8 +22,27 @@
     "dashboard.updates.select-service.launcher": "Launcher",
     "dashboard.updates.list.empty": "No versions found.",
     "dashboard.updates.create.type.label": "Version Type",
+    "dashboard.updates.create.description.label": "Description",
     "dashboard.updates.create.create.label": "Create",
+    "dashboard.updates.upload.next.label": "Next",
+    "dashboard.updates.upload.upload.label": "Upload Zip",
+    "dashboard.updates.upload.error.minimum-size.title": "Your file is too small",
+    "dashboard.updates.upload.error.minimum-size.text": "Your file is too small to be a valid zip file, minimum it should be {{size}}.",
+    "dashboard.updates.upload.error.maximum-size.title": "Your file is too big",
+    "dashboard.updates.upload.error.maximum-size.text": "Your file is too big, maximum it should be {{size}}.",
+    "dashboard.updates.upload.calculate-hash.text": "Calculating file hash, please wait...",
+    "dashboard.updates.upload.start-upload.text": "Preparing to upload, please wait...",
+    "dashboard.updates.upload.upload-chunks.text": "Uploading file...",
     "dashboard.updates.version-type.revision": "Revision",
     "dashboard.updates.version-type.minor": "Minor",
-    "dashboard.updates.version-type.major": "Major"
+    "dashboard.updates.version-type.major": "Major",
+    "dashboard.game.updates.create.title": "Create Game Update",
+    "dashboard.launcher.updates.create.title": "Create Game Update",
+    "update.steps.first-step.label": "First Step",
+    "update.steps.second-step.label": "Second Step",
+    "update.steps.final-step.label": "Final Step",
+    "update.steps.create.description": "Create a new update",
+    "update.steps.edit.description": "Edit an existing update",
+    "update.steps.upload.description": "Upload the update",
+    "update.steps.publish.description": "Publish the update"
 }
